--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     
     <section>
         <div class="heading">
-            <a href="pages/sign-up/signup.html" class="btn btn-outline-primary buttons">Host</a>
+            <a href="MeetUP/pages/sign-up/signup.html" class="btn btn-outline-primary buttons">Host</a>
             <div class="vertical-line"></div>
-            <a href="pages/join-meetup//join.html" class="btn btn-outline-success buttons">Join</a>
+            <a href="MeetUP/pages/join-meetup/join.html" class="btn btn-outline-success buttons">Join</a>
         </div>
     </section>
     
